auto viz in same .qsub as gating